--- a/src/style.css
+++ b/src/style.css
@@ -25,71 +25,75 @@ a:hover {
 body {
   margin: 0;
   display: flex;
- 
+  flex-direction: column;  /* Stack the content vertically */
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
+  margin: 0;  /* Remove default margin */
+  padding: 1em 0;  /* Add padding to create space around h1 */
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: center;
+  flex-basis: 80%;
+  max-height: 100px;
+}
+.header{
+  flex-basis: 90%;
+}
+.container {
+  display: flex;
+  flex-direction: column;  /* Stack all child elements vertically */
+  width: 100%;
+  flex-grow: 1;  /* Make sure container grows to take up the remaining space */
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.main {
+  display: flex;
+  flex-basis: 100%;
+  width: 100%;
+}
+
+.center {
+
+  margin: 1rem;
+  flex-basis: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.center2 {
+  margin: 1rem;
+  flex-basis: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.lyrics {
+  margin: 1rem;
+  flex-basis: 40%;
+  max-width: 40rem;
+  display: block;
+}
+
+.hints {
+  margin: 1rem;
+  flex-basis: 40%;
+  max-width: 40rem;
+  display: block;
+}
+
+.sideImage {
+  flex-basis: 9%;
+  max-width: 40rem;
+  min-height: 100vh;
 }
 
 .card {
   padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-.main{
-  display: flex;
-}
-.lyrics{
-  
-  margin-right: 20rem;
+  flex-basis: 100%;
 }
 
 #guessCount {
@@ -104,16 +108,18 @@ button:disabled {
   border: 1px solid #ccc;
   display: none;
 }
+
 .message-box.success {
   background-color: white;
   color: #1a1a1a;
   border-color: #c3e6cb;
-  display: box;
+  display: block;
 }
+
 .message-box.error {
   background-color: #242424;
   border-color: #f5c6cb;
-  display: box;
+  display: block;
 }
 
 .suggestions-box {
@@ -125,7 +131,7 @@ button:disabled {
   color: #1a1a1a;
   width: 200px;
   border-color: #f5c6cb;
-  display: none; /* Hide by default */
+  display: none;
 }
 
 .suggestion-item {
@@ -137,6 +143,6 @@ button:disabled {
   background-color: #ddd;
 }
 
-.guesses{
+.guesses {
   display: none;
 }
