--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  flex-direction: column;  /* Stack the content vertically */
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -64,7 +64,14 @@ h1 {
   overflow-y: auto;
   white-space: pre-line;
 }
-
+.content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 0;
+  margin: 0;
+  min-height: 99vh;
+}
 .center {
   margin-top: 1rem;
   flex-basis: 100%;
@@ -73,6 +80,7 @@ h1 {
   justify-content: center;
   align-items: flex-start;
   max-height: 100vh;
+  flex-grow: 1;
 }
 .center2 {
   margin: 1rem;
@@ -163,6 +171,12 @@ h1 {
   max-width: 40rem;
   min-height: 100vh;
   object-fit: cover;
+}
+
+footer {
+  flex-basis: 100%;
+  margin-top: 0;
+  max-height: 1vh;
 }
 
 @media (max-width: 1600px) {
